# gumby_yolo

./: LICENSE  README.md
object_detector/: .gitignore  CMakeLists.txt  README.md  cvt.cpp  file_reader_main.cpp  main.cpp  webcam_main.cpp
object_detector/cvt_hal/: CMakeLists.txt  hal.cpp  hal.hpp
object_detector/i2c/: CMakeLists.txt  i2c.cpp  i2c.hpp
object_detector/ocv_utilities/: FoundObject.hpp  cvt_utils.hpp  ocv_utils.hpp
yolo_training/: README.md  gumby_n_friends_training.ipynb  gumby_pokey_training.ipynb
